Fix jump tables